hister/middleware-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: hister
spec:
  basicAuth:
    secret: hister-basic-auth
