hister/deployment-hister.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hister
  namespace: hister
  labels:
    app: hister
    app.kubernetes.io/instance: hister
    app.kubernetes.io/name: hister
    app.kubernetes.io/managed-by: argoCD
spec:
  serviceName: hister
  replicas: 1
  selector:
    matchLabels:
      app: hister
  template:
    metadata:
      labels:
        app: hister
    spec:
      automountServiceAccountToken: false
      priorityClassName: homelab-best-effort
      enableServiceLinks: false
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: hister
          image: harbor.andreybondarenko.com/github/asciimoo/hister:v0.20.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 65532
            runAsGroup: 65532
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: hister-data
              mountPath: /data
            - name: hister-config
              mountPath: /data/config.yml
              subPath: config.yml
              readOnly: true
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 100m
              memory: 4352Mi
            limits:
              memory: 6656Mi
      volumes:
        - name: hister-data
          persistentVolumeClaim:
            claimName: hister-data
        - name: hister-config
          secret:
            secretName: hister-access-token
            items:
              - key: config.yml
                path: config.yml
