hister/service-hister.yaml
apiVersion: v1
kind: Service
metadata:
  name: hister
  namespace: hister
  labels:
    app: hister
spec:
  type: ClusterIP
  selector:
    app: hister
  ports:
    - name: http
      port: 8080
      targetPort: http
