hister/ingress-andreybondarenko-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hister
  name: andreybondarenko-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-geoip-country@kubernetescrd,hister-hsts@kubernetescrd,traefik-robots-disallow-all@kubernetescrd
  labels:
    app: hister
    app.kubernetes.io/name: hister
    app.kubernetes.io/instance: hister
    app.kubernetes.io/version: v0.5.0
    app.kubernetes.io/managed-by: argoCD
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hister.andreybondarenko.com
      secretName: hister-tls
  rules:
    - host: hister.andreybondarenko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hister
                port:
                  number: 8080
