hister/network-policy-hister-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hister-default-deny
  namespace: hister
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
